--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node-osascript": "^1.0.2",
     "open": "0.0.5",
     "os-homedir": "^1.0.1",
+    "os-locale": "^1.4.0",
     "ps-node": "0.0.5",
     "simple-node-logger": "^0.93.11",
     "tracer": "^0.8.3"
